--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "private": true,
   "scripts": {
     "watch": "webpack --mode=development --watch --config config/webpack.config.js",
-    "build": "webpack --mode=production --config config/webpack.config.js",
+    "build": "NODE_OPTIONS=--openssl-legacy-provider webpack --mode=production --config config/webpack.config.js",
+    "build:firefox": "web-ext build -s build --overwrite-dest",
+    "start:firefox": "web-ext run --source-dir ./build/",
     "deploy": "gh-pages -d website"
   },
   "devDependencies": {
@@ -18,6 +20,7 @@
     "size-plugin": "^2.0.1",
     "ts-loader": "^8.0.10",
     "typescript": "^4.0.5",
+    "web-ext": "^7.6.2",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
     "webpack-merge": "^5.3.0"
